--- a/Employee dashboard/index.html
+++ b/Employee dashboard/index.html
@@ -20,7 +20,20 @@
             <div class="employee-list border-1 border-radius-12 "> 
             </div>
         </div>
-            <div class="employee-details border-1 border-radius-12 ">div2</div>
+            <div class="employee-details border-1 border-radius-12 ">
+                <div class="emp-func hide ">
+                    <div class="edit pointer-cursor icon-style">
+                        ✍🏻
+                     </div>
+                     <div class="delete pointer-cursor icon-style">
+                        🥡
+                     </div>
+                </div>
+                <div class="emp-data ">
+
+
+                </div>
+            </div>
         </div>
 
         <div class="pop-up-window border-1 border-radius-12 hide">
@@ -30,9 +43,6 @@
             <div>
                 <input class="searchText m-t-4 align-center border-radius-12 lastname" type="text" placeholder="Last name" />
             </div>
-            <div>
-              <input class="searchText m-t-4 align-center border-radius-12 email" type="email" placeholder="email" />
-          </div>
             <div class="align-center">
                 <button class="btn m-t-4">Submit</button>
             </div>
